--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,4 +1,4 @@
-<%- if @user.allow_local_auth %>
+<%- if User.allow_local_auth %>
   <%- if controller_name != 'sessions' %>
     <%= link_to "Log in", new_session_path(resource_name) %><br />
   <% end %>
